Fixing spacing issues

--- a/Personal Blog Website/CSS/BuildingBlocks/fontsize.css
+++ b/Personal Blog Website/CSS/BuildingBlocks/fontsize.css
@@ -13,9 +13,14 @@ h1 {
   h4 {
     font-size: 3vmin;
     color: darkslategray;
-    margin-top: -50px;
+    margin-top: -10%;
   }
   
+  h5 {
+    font-size: 3vmin;
+    color: darkslategray;
+  } 
+
   p {
     font-size: 2vmin;
   }
